fixed issue where the video takes too much space

--- a/apps/server/style/StudentsScreenShareView.module.scss
+++ b/apps/server/style/StudentsScreenShareView.module.scss
@@ -4,3 +4,17 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.videoMain {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: grid;
+
+    align-items: center;
+    justify-content: center;
+    video {
+        max-width: 80vw;
+        max-height: 80vh;
+    }
+}
